--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= page_entries_info @books %>
+
 <h1><%= Book.model_name.human %></h1>
 
 <table>
@@ -27,6 +29,8 @@
     <% end %>
   </tbody>
 </table>
+
+<%= paginate @books %>
 
 <br>
 
