--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing User</h1>
+<h1><%= t('views.common.title_edit', name: User.model_name.human) %></h1>
 
 <%= render 'form', user: @user %>
 
