--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
 
   <p class="navbar-text pull-right">
     <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path, class: 'navbar-link' %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
+      <%= t('views.common.logged in as') %> <strong><%= current_user.email %></strong>
+      <%= link_to t('views.common.edit profile'), edit_user_registration_path, class: 'navbar-link' %> |
+      <%= link_to t('views.common.logout'), destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
     <% else %>
-      <%= link_to "Sign up", new_user_registration_path, class: 'navbar-link'  %> |
-      <%= link_to "Login", new_user_session_path, class: 'navbar-link'  %>
+      <%= link_to t('views.common.sign up'), new_user_registration_path, class: 'navbar-link'  %> |
+      <%= link_to t('views.common.login'), new_user_session_path, class: 'navbar-link'  %>
     <% end %>
   </p>
 
