--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,16 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
+<h1><%= User.model_name.human %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>id</th>
-      <th>email</th>
-      <th colspan="3"></th>
+      <th><%= User.human_attribute_name(:id) %></th>
+      <th><%= User.human_attribute_name(:name) %></th>
+      <th><%= User.human_attribute_name(:email) %></th>
+      <th><%= User.human_attribute_name(:postal_code) %></th>
+      <th><%= User.human_attribute_name(:address) %></th>
+      <th><%= User.human_attribute_name(:introduction) %></th>
+      <th colspan="１"></th>
     </tr>
   </thead>
 
@@ -15,15 +18,17 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.id %></td>
+        <td><%= user.name %></td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= user.postal_code %></td>
+        <td><%= user.address %></td>
+        <td><%= user.introduction %></td>
+        <td><%= link_to t('views.common.show'), user %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
+<%= paginate @users %>
 
-<%= link_to 'New User', new_user_path %>
+<br>
