--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,4 +28,6 @@
   </div>
 <% end %>
 
+<%= button_to "Sign in with GitHub", user_github_omniauth_authorize_path %>
+
 <%= render "devise/shared/links" %>
