--- a/app/views/devise/registrations/_profile_fields.html.erb
+++ b/app/views/devise/registrations/_profile_fields.html.erb
@@ -1,19 +1,25 @@
 <div class="field">
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
 </div>
 
 <div class="field">
-  <%= f.label :postal_code %>
-  <%= f.text_field :postal_code %>
+    <%= f.label :postal_code %>
+    <%= f.text_field :postal_code %>
 </div>
 
 <div class="field">
-  <%= f.label :address %>
-  <%= f.text_field :address %>
+    <%= f.label :address %>
+    <%= f.text_field :address %>
 </div>
 
 <div class="field">
-  <%= f.label :self_introduction %>
-  <%= f.text_area :self_introduction %>
+    <%= f.label :self_introduction %>
+    <%= f.text_area :self_introduction %>
+</div>
+
+<div class="field">
+    <%= f.label :avatar %>
+    <%= f.file_field :avatar, accept: '.jpeg, .jpg, .gif, .png' %>
+    <p><%= image_tag resource.avatar.variant(resize: '50') if resource.avatar.attached? %></p>
 </div>
