--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,36 @@
 <h1><%= t('views.common.title_show', name: User.model_name.human) %></h1>
 
 <p>
-  <strong><%= User.human_attribute_name(:email) %>:</strong>
-  <%= @user.email %>
+    <strong><%= User.human_attribute_name(:email) %>:</strong>
+    <%= @user.email %>
 </p>
 
 <p>
-  <strong><%= User.human_attribute_name(:name) %>:</strong>
-  <%= @user.name %>
+    <strong><%= User.human_attribute_name(:name) %>:</strong>
+    <%= @user.name %>
 </p>
 
 <p>
-  <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
-  <%= @user.postal_code %>
+    <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
+    <%= @user.postal_code %>
 </p>
 
 <p>
-  <strong><%= User.human_attribute_name(:address) %>:</strong>
-  <%= @user.address %>
+    <strong><%= User.human_attribute_name(:address) %>:</strong>
+    <%= @user.address %>
 </p>
 
 <p>
-  <strong><%= User.human_attribute_name(:self_introduction) %>:</strong>
-  <%= @user.self_introduction %>
+    <strong><%= User.human_attribute_name(:self_introduction) %>:</strong>
+    <%= @user.self_introduction %>
+</p>
+
+<p>
+    <strong><%= User.human_attribute_name(:avatar) %>:</strong>
+    <%= image_tag @user.avatar.variant(resize: '50') if @user.avatar.attached? %>
 </p>
 
 <% if current_user == @user %>
-  <%= link_to t('views.common.edit'), edit_user_registration_path %> |
+<%= link_to t('views.common.edit'), edit_user_registration_path %> |
 <% end %>
 <%= link_to t('views.common.back'), users_path %>
