--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,10 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Reports</h1>
+<h1><%= Report.model_name.human %></h1>
 
 <table>
   <thead>
     <tr>
+      <th><%= Report.human_attribute_name(:title) %></th>
+      <th><%= Report.human_attribute_name(:content) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +12,8 @@
   <tbody>
     <% @reports.each do |report| %>
       <tr>
+        <td><%= report.title %></td>
+        <td><%= report.content %></td>
         <td><%= link_to 'Show', report %></td>
         <td><%= link_to 'Edit', edit_report_path(report) %></td>
         <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
