--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: current_user.active_relationships.find_by(followed_id: @user.id),
+<%= form_with(model: current_user.active_relationships.find_by(followee_id: @user.id),
             html: { method: :delete }, local: false) do |f| %>
-  <%= f.submit t('views.common.Unfollow'), class: "btn" %>
+<%= f.submit t('views.common.Unfollow'), class: "btn" %>
 <% end %>
