--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
 
 <% unless @user == current_user %>
 <div id="follow_form">
-    <% if current_user.is_following?(@user) %>
+    <% if current_user.follows?(@user) %>
     <%= render 'unfollow' %>
     <% else %>
     <%= render 'follow' %>
