--- a/app/views/users/shared/_stats.html.erb
+++ b/app/views/users/shared/_stats.html.erb
@@ -1,12 +1,12 @@
 <% @user ||= current_user %>
 <div class="stats">
-  <a href="<%= following_user_path(@user) %>">
-    <strong id="following" class="stat">
+  <a href="<%= user_followings_path(@user) %>">
+    <strong id="followings" class="stat">
       <%= @user.followings.count %>
     </strong>
-    <%= t('views.common.Following') %>
+    <%= t('views.common.Followings') %>
   </a>
-  <a href="<%= followers_user_path(@user) %>">
+  <a href="<%= user_followers_path(@user) %>">
     <strong id="followers" class="stat">
       <%= @user.followers.count %>
     </strong>
