--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -10,5 +10,5 @@
   <%= @report.content %>
 </p>
 
-<%= link_to 'Edit', edit_report_path(@report) %> |
+<%= link_to 'Edit', edit_report_path(@report) if @report.user_id == current_user.id %>
 <%= link_to 'Back', reports_path %>
