--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th><%= Report.human_attribute_name(:title) %></th>
       <th><%= Report.human_attribute_name(:content) %></th>
+      <th><%= Report.human_attribute_name(:created_at) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
       <tr>
         <td><%= report.title %></td>
         <td><%= report.content %></td>
+        <td><%= l(report.created_at, format: :long) %></td>
         <td><%= link_to 'Show', report %></td>
         <% if report.user_id == current_user.id %>
           <td><%= link_to 'Edit', edit_report_path(report) %></td>
