--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,28 +20,8 @@
   <%= image_tag(@book.picture_url) if @book.picture.present? %>
 </p>
 
-<h1><%= Comment.model_name.human %></h1>
-
-<table>
-  <thead>
-    <tr>
-      <th><%= User.model_name.human %></th>
-      <th><%= Comment.human_attribute_name(:content) %></th>
-      <th><%= Comment.human_attribute_name(:created_at) %></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @book.comments.each do |comment| %>
-      <tr>
-        <td><%= comment.user.name.empty? ? comment.user.email : comment.user.name %></td>
-        <td><%= comment.content %></td>
-        <td><%= l(comment.created_at, format: :short) %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render partial: 'comments/comments', locals: {commentable: @book} %>
+<%= render partial: 'comments/form', locals: {commentable: @book} %>
 
 <%= link_to t('views.common.edit'), edit_book_path(@book) %> |
 <%= link_to t('views.common.back'), books_path %>
