--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -18,10 +18,10 @@
         <td><%= report.title %></td>
         <td><%= report.content %></td>
         <td><%= l(report.created_at, format: :long) %></td>
-        <td><%= link_to 'Show', report %></td>
+        <td><%= link_to t('views.common.show'), report %></td>
         <% if report.user_id == current_user.id %>
-          <td><%= link_to 'Edit', edit_report_path(report) %></td>
-          <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to t('views.common.edit'), edit_report_path(report) %></td>
+          <td><%= link_to t('views.common.destroy'), report, method: :delete, data: { confirm: t('views.common.delete_confirm') } %></td>
         <% end %>
       </tr>
     <% end %>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Report', new_report_path %>
+<%= link_to t('views.common.new'), new_report_path %>
