--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -13,5 +13,5 @@
 <%= render partial: 'comments/comments', locals: {commentable: @report} %>
 <%= render partial: 'comments/form', locals: {commentable: @report} %>
 
-<%= link_to 'Edit', edit_report_path(@report) if @report.user_id == current_user.id %>
-<%= link_to 'Back', reports_path %>
+<%= link_to t('views.common.edit'), edit_report_path(@report) if @report.user_id == current_user.id %>
+<%= link_to t('views.common.back'), reports_path %>
