--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,22 +1,22 @@
 <%= form_with(model: [commentable, Comment.new]) do |form| %>
-  <% if commentable.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(commentable.errors.count, "error") %> prohibited this comment from being saved:</h2>
+<% if !@comment.nil? && @comment.errors.any? %>
+<div id="error_explanation">
+    <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
 
-      <ul>
-        <% commentable.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+    <ul>
+        <% @comment.errors.each do |error| %>
+        <li><%= error.full_message %></li>
         <% end %>
-      </ul>
-    </div>
-  <% end %>
+    </ul>
+</div>
+<% end %>
 
-  <div class="field">
+<div class="field">
     <%= form.label :content %>
     <%= form.text_field :content, required: true %>
-  </div>
+</div>
 
-  <div class="actions">
+<div class="actions">
     <%= form.submit %>
-  </div>
+</div>
 <% end %>
